// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIAddress renders Bitcoin address 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      128Lkh3...Mp8p6
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Bitcoin address with blockie 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      128Lkh3...Mp8p6
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Cosmos address 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      cosmos1...6hdc0
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Cosmos address with blockie 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      cosmos1...6hdc0
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Ethereum address 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      0xab16a...Bfcdb
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Ethereum address with blockie 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      0xab16a...Bfcdb
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Hedera address 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      0.0.123...zbhlt
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Hedera address with blockie 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      0.0.123...zbhlt
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Polkadot address 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      5hmuyxw...egmfy
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Polkadot address with blockie 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      5hmuyxw...egmfy
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Starknet address 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      0x02dd1...0ab57
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders Starknet address with blockie 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      0x02dd1...0ab57
    </p>
  </div>
</div>
`;

exports[`SnapUIAddress renders legacy Ethereum address 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__address mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
    data-testid="snap-ui-address"
  >
    <div
      class="inline-flex shrink-0 items-center justify-center overflow-hidden bg-section rounded-lg h-8 w-8"
    >
      <img
        alt="maskicon"
        height="32"
        src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E"
        width="32"
      />
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
      style="line-break: anywhere;"
    >
      0xab16a...Bfcdb
    </p>
  </div>
</div>
`;
